Configurações de ambiente e importando algumas fonts

--- a/frontend/tsconfig.vite-config.json
+++ b/frontend/tsconfig.vite-config.json
@@ -2,6 +2,11 @@
   "extends": "@vue/tsconfig/tsconfig.node.json",
   "include": ["vite.config.*"],
   "compilerOptions": {
+    "paths": {
+      "@/*": [
+        "./*"
+      ]
+    },
     "composite": true,
     "types": ["node", "vitest"]
   }
