--- a/frontend/tsconfig.json
+++ b/frontend/tsconfig.json
@@ -1,5 +1,12 @@
 {
   "files": [],
+  "compilerOptions": {
+    "paths": {
+      "@/*": [
+        "./*"
+      ]
+    }
+  },
   "references": [
     {
       "path": "./tsconfig.vite-config.json"
